@@ -1,13 +1,5 @@
 # running tests #
 
-important for the rails4 warfile tests to increase the PermGen Space
-for jdk7
-
-```
-export MAVEN_OPTS='-XX:MaxPermSize=512m'
-```
-
-
 all tests from the ./maven/jruby directory
 ```
 mvn verify -Papps
